--- a/frontend-vite/package.json
+++ b/frontend-vite/package.json
@@ -14,7 +14,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.1",
     "yup": "^1.2.0"
   },
