--- a/frontend-vite/package.json
+++ b/frontend-vite/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
