--- a/frontend-vite/package.json
+++ b/frontend-vite/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
@@ -22,6 +23,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
+    "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.18.0",
