--- a/frontend-vite/package.json
+++ b/frontend-vite/package.json
@@ -15,6 +15,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
+    "flowbite": "^1.8.0",
+    "flowbite-react": "^0.5.0",
     "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +29,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.18.0",
+    "recharts": "^2.7.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.1",
     "yup": "^1.2.0"
